# SFGE

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  Doxyfile  LICENSE  README.md  lgtm.yml  sonar-project.properties
ECGE/: CMakeLists.txt
ECGE/include/ecge/: agameobject.hpp  agameobject.inl  ascene.hpp  ascene.inl  baseapplication.hpp  components.hpp  event.h  pimpl.hpp
ECGE/include/ecge/components/: ascript.h  component.hpp  input.h  renderable.hpp  rigidbody.hpp  scriptable.h  scriptable.inl  transformable.hpp
ECGE/include/ecge/logger/: ilogger.h  logger.h
ECGE/src/: baseapplication.cpp  baseapplication_p.h
ECGE/src/config/: configurationmanager.cpp  configurationmanager.h  iconfiguration.h  iniconfig.cpp  iniconfig.h  iniconfig.inl  inifile.cpp  inifile.h  inifile.inl  physicsconfig.cpp  physicsconfig.h  physicsconfiguration.cpp  physicsconfiguration.h  rendererconfig.cpp  rendererconfig.h  rendererconfiguration.cpp  rendererconfiguration.h
ECGE/src/ecs/: components.cpp  componentsevents.cpp  componentsevents.h
ECGE/src/ecs/components/: ascript.cpp  component.cpp  input.cpp  renderable.cpp  rigidbody.cpp  scriptable.cpp  transformable.cpp
ECGE/src/ecs/systems/: inputsystem.cpp  inputsystem.h  isystem.hpp  physicssystem.cpp  physicssystem.hpp  rendersystem.cpp  rendersystem.hpp  scriptsystem.cpp  scriptsystem.h
ECGE/src/gameobject/: agameobject.cpp  agameobject_p.hpp
ECGE/src/input/: eventlistener.hpp  eventprocessor.cpp  eventprocessor.hpp
ECGE/src/logger/: Logger.cpp  Logger.h  ilogger.h  logger.cpp  logger.h  spdloglogger.cpp  spdloglogger.h
ECGE/src/scene/: ascene.cpp  ascene_p.hpp  scenegraph.cpp  scenegraph.hpp  scenemanager.cpp  scenemanager.hpp
SFGE/: CMakeLists.txt
SFGE/include/sfge/: agameobject.hpp  agameobject.inl  ascene.hpp  ascene.inl  baseapplication.hpp  common.hpp  event.h  event.hpp  pimpl.hpp  textureloader.hpp
SFGE/include/sfge/components/: ascript.hpp  camera.hpp  component.hpp  input.hpp  renderable.hpp  rigidbody.hpp  scriptable.h  scriptable.hpp  scriptable.inl  transformable.hpp
SFGE/include/sfge/exceptions/: badtype.hpp  exception.hpp
SFGE/include/sfge/gameobject/: agameobject.hpp  agameobject.inl  camera.hpp
SFGE/include/sfge/logger/: ilogger.hpp  logger.h  logger.hpp
SFGE/include/sfge/network/: arequest.hpp  client.hpp  frame.hpp  global.hpp  server.hpp  udp_connection.hpp  udpconnection.hpp
SFGE/include/sfge/resources/: musicloader.hpp  soundloader.hpp  textureloader.hpp
SFGE/include/sfge/scene/: ascene.hpp  ascene.inl
SFGE/include/sfge/services/: iloggerservice.hpp  imainrendererservice.hpp  imusicloaderservice.hpp  isoundloaderservice.hpp  itextureloaderservice.h  itextureloaderservice.hpp  servicelocator.hpp  servicelocator.inl
SFGE/src/: baseapplication.cpp  baseapplication_p.hpp
SFGE/src/config/: aconfiguration.cpp  aconfiguration.hpp  configurationmanager.cpp  configurationmanager.h  configurationmanager.hpp  globalconfig.cpp  globalconfig.hpp  iconfiguration.hpp  iniconfig.cpp  iniconfig.h  iniconfig.hpp  iniconfig.inl  key.hpp  keydefinition.hpp  physicsconfig.cpp  physicsconfig.h  physicsconfig.hpp  rendererconfig.cpp  rendererconfig.h  rendererconfig.hpp  typeparser.cpp  typeparser.hpp  types.hpp  typevalidator.cpp  typevalidator.hpp
SFGE/src/core/application/: baseapplication.cpp  baseapplication_p.hpp  eventlistener.hpp  eventprocessor.cpp  eventprocessor.hpp
SFGE/src/core/collisions/: contactlistener.cpp
SFGE/src/core/ecs/: componentsevents.cpp  componentsevents.hpp  contactlistener.cpp  contactlistener.hpp  rigidbodyeventscallbacks.hpp
SFGE/src/core/gameobject/: agameobject.cpp  agameobject_p.hpp  camera.cpp
SFGE/src/core/input/: eventlistener.hpp  eventprocessor.cpp  eventprocessor.hpp
SFGE/src/core/network/: CMakeLists.txt  client.cpp  server.cpp  udp_connection.cpp
SFGE/src/core/renderer/: mainrenderer.cpp  mainrenderer.hpp
SFGE/src/core/resource/: textureloader.cpp
SFGE/src/core/resources/: fontloader.cpp  fontloader.hpp  musicloader.cpp  musicloader.hpp  soundloader.cpp  soundloader.hpp  textureloader.cpp  textureloader.hpp  textureloader_p.hpp
SFGE/src/core/scene/: ascene.cpp  ascene_p.hpp  scenegraph.cpp  scenegraph.hpp  scenemanager.cpp  scenemanager.hpp
SFGE/src/ecs/: componentsevents.cpp  componentsevents.h
SFGE/src/ecs/components/: component.cpp  renderable.cpp  transformable.cpp
SFGE/src/ecs/systems/: inputsystem.cpp  physicssystem.cpp  (+3 more)
SFGE/src/exceptions/: badtype.cpp  exception.cpp
SFGE/src/gameobject/: agameobject.cpp  agameobject_p.hpp
SFGE/src/input/: eventlistener.hpp  eventprocessor.cpp
SFGE/src/logger/: logger.cpp  spdloglogger.cpp  spdloglogger.h  spdloglogger.hpp
SFGE/src/network/: CMakeLists.txt  client.cpp  server.cpp  udpconnection.cpp
SFGE/src/random/: cavegeneration.cpp  cavegeneration.hpp  generatevertices.cpp  lehmer32.cpp  lehmer32.hpp
SFGE/src/scene/: ascene.cpp  ascene_p.hpp  scenegraph.cpp  scenegraph.hpp  scenemanager.cpp  scenemanager.hpp
SFGE/src/services/: iconfigurationmanagerservice.h  servicelocator.cpp
SFGE/src/statemachine/: astatemachine.cpp  astatemachine.hpp  istate.hpp
SFGE/src/utils/: astatemachine.hpp
Sample/: CMakeLists.txt  main.cpp  testgameobject.cpp  testgameobject.hpp  testscene.cpp  testscene.hpp  testscript.cpp  testscript.h  testscript.hpp
Tests/: CMakeLists.txt  README.md  main.cpp
Tests/common/: CMakeLists.txt  objectregister.cpp  script.cpp  scriptablestates.cpp
Tests/common/mock/: objectregister.hpp  script.hpp  scriptablestates.hpp
Tests/components/: CMakeLists.txt  agameobject_tests.cpp  camera_tests.cpp  renderable_tests.cpp  scriptable_tests.cpp  transformable_tests.cpp
Tests/config/: CMakeLists.txt  configglobal_tests.cpp  configphysics_tests.cpp  configrenderer_tests.cpp
Tests/resources/: CMakeLists.txt  resources.hpp  sounds_tests.cpp  textures_tests.cpp
src/Client/: CMakeLists.txt  main.cpp  testgameobject.hpp  testscene.cpp  testscene.hpp
src/SFGE/: CMakeLists.txt
src/SFGE/src/: baseapplication.cpp  baseapplication_p.h
(+502 files in other folders)
